--- a/project1-blog/server/package.json
+++ b/project1-blog/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/matt-muniz/100days#readme",
   "dependencies": {
-    "contentful": "^7.14.0"
+    "contentful": "^7.14.0",
+    "contentful-management": "^5.13.0"
   }
 }
