--- a/project1-blog/server/package.json
+++ b/project1-blog/server/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/matt-muniz/100days#readme",
   "dependencies": {
-    "contentful": "^7.14.0"
+    "body-parser": "^1.19.0",
+    "contentful": "^7.14.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
+    "pusher": "^3.0.0"
   }
 }
