--- a/project1-blog/server/package.json
+++ b/project1-blog/server/package.json
@@ -22,9 +22,13 @@
     "body-parser": "^1.19.0",
     "contentful": "^7.14.0",
     "contentful-management": "^5.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2",
+    "mongoose": "^5.9.6",
     "pusher": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
