--- a/project1-blog/client/package.json
+++ b/project1-blog/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "axios": "^0.19.2",
     "nuxt": "^2.0.0",
     "pusher-js": "^5.1.1"
   },
