--- a/project1-blog/client/package.json
+++ b/project1-blog/client/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "axios": "^0.19.2",
+    "contentful": "^7.14.0",
+    "contentful-management": "^5.16.1",
     "nuxt": "^2.0.0",
     "pusher-js": "^5.1.1"
   },
