--- a/project2-shopify/server/package.json
+++ b/project2-shopify/server/package.json
@@ -14,7 +14,10 @@
     "contentful": "^7.14.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
